# anatree

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  anatree.h  makefile
.github/: codecov.yml
.github/workflows/: header-only.yml  test.yml
anatree/: CMakeLists.txt  anatree.h
src/: CMakeLists.txt  anatree.h
test/: CMakeLists.txt  test.cpp
