# ============================================================================ #
# Library Source Code
# ============================================================================ #
add_subdirectory (anatree)

# ============================================================================ #
# Unit Tests
# ============================================================================ #
add_subdirectory (test)
